fixed border-image on firefox by adding border-style property (required according to spec, although Chrome didn't need it)

--- a/wp-content/themes/rp3/src/sass/_widgets.scss
+++ b/wp-content/themes/rp3/src/sass/_widgets.scss
@@ -68,6 +68,7 @@
 
 		li {
 			background-color: $gray-light;
+			border-style: solid;
 			border-width: 8px 8px 8px 9px;
 			border-image: url("../images/tweet-border.gif") 14 25 16 17 repeat;
 			margin-bottom: 1em;
